fixed some styling of video on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -142,4 +142,9 @@ footer .section-title {
         height: auto;
         width: 100%;
     }
+
+    .vidMobile {
+        width: 100%;
+        height: auto;
+    }
   }
